# mcp-toolbox

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
Tasks/01-project-scaffolding/: analysis.md  plan.md
Tasks/02-sendgrid-integration/: analysis.md  plan.md
Tasks/03-clickup-integration/: analysis.md  plan.md
Tasks/04-clickup-missing-endpoints/: analysis.md  plan.md
Tasks/05-office365-email/: analysis.md  plan.md
Tasks/06-teams-integration/: analysis.md  plan.md
Tasks/07-azure-keyvault/: analysis.md  plan.md
Tasks/08-aws-secrets-manager/: analysis.md  plan.md
Tasks/09-slack-integration/: analysis.md  plan.md
Tasks/10-ms-calendar/: analysis.md  plan.md
Tasks/11-hubspot-crm/: analysis.md  plan.md
Tasks/12-generic-http/: analysis.md  plan.md
Tasks/13-jira/: analysis.md  plan.md
Tasks/14-google-sheets/: analysis.md  plan.md
Tasks/15-quickbooks/: analysis.md
Tasks/16-github/: analysis.md
Tasks/17-stripe/: analysis.md  plan.md
Tasks/18-google-calendar/: analysis.md
Tasks/19-gmail-api/: analysis.md
Tasks/20-google-docs/: analysis.md
Tasks/21-google-tasks/: analysis.md
Tasks/22-salesforce/: analysis.md
Tasks/23-google-drive/: analysis.md
Tasks/24-notion/: analysis.md
Tasks/25-zendesk/: analysis.md
src/mcp_toolbox/: __init__.py  __main__.py  config.py  server.py
src/mcp_toolbox/tools/: __init__.py  aws_ssm_tool.py  calendar_tool.py  clickup_tool.py  example_tool.py  gcal_tool.py  gdocs_tool.py  gdrive_tool.py  github_tool.py  gmail_tool.py  gtasks_tool.py  http_tool.py  hubspot_tool.py  jira_tool.py  keyvault_tool.py  notion_tool.py  o365_tool.py  quickbooks_tool.py  salesforce_tool.py  sendgrid_tool.py  sheets_tool.py  slack_tool.py  stripe_tool.py  teams_tool.py  zendesk_tool.py
tests/: test_aws_ssm_tool.py  test_calendar_tool.py  test_clickup_tool.py  test_example_tool.py  test_gcal_tool.py  test_gdocs_tool.py  test_gdrive_tool.py  test_github_tool.py  test_gmail_tool.py  test_gtasks_tool.py  test_http_tool.py  test_hubspot_tool.py  test_jira_tool.py  test_keyvault_tool.py  test_notion_tool.py  test_o365_tool.py  test_quickbooks_tool.py  test_salesforce_tool.py  test_sendgrid_tool.py  test_server.py  test_sheets_tool.py  test_slack_tool.py  test_stripe_tool.py  test_teams_tool.py  test_zendesk_tool.py
