[project]
name = "mcp-toolbox"
version = "0.1.0"
description = "MCP server providing external API integrations for LLM clients"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "sendgrid>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "pyright>=1.1.0",
    "respx>=0.21.0",
]

[project.scripts]
mcp-toolbox = "mcp_toolbox.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
exclude = ["src/mcp_toolbox/tools/sendgrid_tool.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
