[project]
name = "mcp-toolbox"
version = "0.1.0"
description = "MCP server providing external API integrations for LLM clients"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "sendgrid>=6.0.0",
    "msal>=1.28.0",
    "boto3>=1.34.0",
    "slack-sdk>=3.30.0",
    "google-auth[requests]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "pyright>=1.1.0",
    "respx>=0.21.0",
]

[project.scripts]
mcp-toolbox = "mcp_toolbox.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
exclude = ["src/mcp_toolbox/tools/sendgrid_tool.py", "src/mcp_toolbox/tools/o365_tool.py", "src/mcp_toolbox/tools/teams_tool.py", "src/mcp_toolbox/tools/keyvault_tool.py", "src/mcp_toolbox/tools/aws_ssm_tool.py", "src/mcp_toolbox/tools/slack_tool.py", "src/mcp_toolbox/tools/calendar_tool.py", "src/mcp_toolbox/tools/stripe_tool.py", "src/mcp_toolbox/tools/sheets_tool.py", "src/mcp_toolbox/tools/quickbooks_tool.py", "src/mcp_toolbox/tools/github_tool.py", "src/mcp_toolbox/tools/gtasks_tool.py", "src/mcp_toolbox/tools/gcal_tool.py", "src/mcp_toolbox/tools/gdocs_tool.py", "src/mcp_toolbox/tools/gmail_tool.py", "src/mcp_toolbox/tools/notion_tool.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
